Add or update api endpoints with exception handler